# src/routes/categories.routers.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import multer from 'multer';
 import { CreateCategoryController } from '../modules/cars/userCases/createCategory/CreateCategoryController';
-import importCategoryController  from '../modules/cars/userCases/importCategory';
+import { ImportCategoryController }  from '../modules/cars/userCases/importCategory/ImportCategoryController';
 import { ListCategoriesController } from '../modules/cars/userCases/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
@@ -14,14 +14,13 @@ const createCategoryController = new CreateCategoryController();
 
 const listCategoriesController = new ListCategoriesController();
 
+const importCategoryController = new ImportCategoryController();
+
 categoriesRoutes.post('/', createCategoryController.handle);
 
 categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response )=>{
-   
-    return importCategoryController().handle(request, response);
-});
+categoriesRoutes.post('/import', upload.single('file'), importCategoryController.handle);
 
 
 export { categoriesRoutes };
