# src/swagger.json
@@ -72,6 +72,33 @@
                 }
             }
         },
+        "/categories/import":{
+            "post": {
+                "tags" : ["Category"],
+                "summary": "Upload a new category",
+                "description": "",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type": "object",
+                                "properties":{
+                                    "file" :{
+                                        "type" : "string",
+                                        "format" : "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
         "/specifications": {
             "post":{
                 "tags": ["Specification"],
@@ -81,16 +108,8 @@
                     "content":{
                         "application/json":{
                             "schema":{
-                                "type": "object"
-                            },
-                            "properties": {
-                                "name": {
-                                    "type": "string"
-                                },
-                                "description": {
-                                    "type": "string"
-                                }                                
-                            },
+                                "$ref": "#/definitions/Specification"
+                            },                            
                             "example": {
                                 "name": "Specification name sample",
                                 "description": "Specification description"
@@ -133,6 +152,19 @@
                         }
                     }
                 }
+            }
+        }
+    },
+    "definitions": {
+        "Specification":{
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }                                
             }
         }
     }
